added a pic and p/n. for ft200 short power cable

--- a/FT200.html
+++ b/FT200.html
@@ -95,13 +95,21 @@ has_children: true
                 <td>1</td>
             </tr>
             <tr>
-                <td><a href="\assets\FT200\key.jpg" data-lightbox="key">卡片</a></td>
+                <td><a href="\assets\FT200\key.jpg" data-lightbox="ft200-accessories">卡片</a></td>
                 <td>根据标准(Mifare 或 Tag-it)，款式和颜色确定
                     <a href="\assets\FT200\catalog\fancy-key-cards.pdf">编号</a>
                 </td>
             </tr>
+            <tr>
+                <td colspan="3">FT200电源短线无需单独订购，若损坏，可使用如下编号订购</td>
+            </tr>
+            <tr>
+                <td><a href="\assets\FT200\ft200_short_power_cable.jpg" data-lightbox="ft200-accessories">FT200电源短线</a></td>
+                <td>237.59.115</td>
+            </tr>
         </tbody>
     </table>
+    
     <figure>
         <img src="\assets\FT200\ft200_config.jpg" alt="" srcset="">
         <figcaption>FT200典型配置</figcaption>
