modified the layout of table cell

--- a/FT200.html
+++ b/FT200.html
@@ -96,7 +96,7 @@ has_children: true
             </tr>
             <tr>
                 <td><a href="\assets\FT200\key.jpg" data-lightbox="ft200-accessories">卡片</a></td>
-                <td>根据标准(Mifare 或 Tag-it)，款式和颜色确定
+                <td colspan="2">根据标准(Mifare 或 Tag-it)，款式和颜色确定
                     <a href="\assets\FT200\catalog\fancy-key-cards.pdf">编号</a>
                 </td>
             </tr>
@@ -109,7 +109,6 @@ has_children: true
             </tr>
         </tbody>
     </table>
-    
     <figure>
         <img src="\assets\FT200\ft200_config.jpg" alt="" srcset="">
         <figcaption>FT200典型配置</figcaption>
@@ -141,26 +140,20 @@ has_children: true
         </tbody>
     </table>
     <div class="responsive"><img src="/assets/FT200/FT200.jpg" alt=""></div>
-    <ul>
-        <li>
-            <details>
-                <summary>单页</summary>
-                <ul>
-                    <li><a href="/assets/FT200/catalog/pages_ch.pdf">中文单页</a></li>
-                    <li><a href="/assets/FT200/catalog/pages_en.pdf">英文单页</a></li>
-                </ul>
-            </details>
-        </li>
-        <li>
-            <details>
-                <summary>安装示意图</summary>
-                <ul>
-                    <li><a href="\assets\FT200\ft200_mounting.pdf">FT200安装示意图</a></li>
-                    <li><a href="\assets\FT200\fan200_mounting.pdf">读头FAN200安装示意图</a></li>
-                </ul>
-            </details>
-        </li>
-    </ul> 
+    <details>
+        <summary>单页</summary>
+        <ul>
+            <li><a href="/assets/FT200/catalog/pages_ch.pdf">中文单页</a></li>
+            <li><a href="/assets/FT200/catalog/pages_en.pdf">英文单页</a></li>
+        </ul>
+    </details>
+    <details>
+        <summary>安装示意图</summary>
+        <ul>
+            <li><a href="\assets\FT200\ft200_mounting.pdf">FT200安装示意图</a></li>
+            <li><a href="\assets\FT200\fan200_mounting.pdf">读头FAN200安装示意图</a></li>
+        </ul>
+    </details>
     <script src="\js\lightbox-plus-jquery.js"></script>
     <script src="\js\ft200_components_selection.js"></script>
 </body>
