--- a/assets/app-hdm/FT200-add-on.html
+++ b/assets/app-hdm/FT200-add-on.html
@@ -115,6 +115,8 @@ parent: app(HDM)
         <li><a class="dm22009" download href="\assets\app-hdm\add-on\FT200\DM22009-AlmPrem FT200DualAnt.Signed.FT200.001 342.dlkAddon">001 342-001 344(报警+'2|2')</a></li>
         <li><a class="dm22009" download href="\assets\app-hdm\add-on\FT200\DM22009-AlmPrem FT200DualAnt.Signed.FT200.001 528.dlkAddon">001/528 529 530(报警+'2|2')</a></li>
         <li><a download href="\assets\app-hdm\add-on\FT200\DM22005-AlrmPrem FT200.Signed.FT200.001 525.dlkAddon">001/525 526 527(报警)</a></li>
+        <li><a download href="\assets\app-hdm\add-on\FT200\DM22005-AlrmPrem FT200.Signed.FT200.001 315.dlkAddon">001/315 316 317(报警)</a></li>
+        <li><a download href="\assets\app-hdm\add-on\FT200\DM22005-AlrmPrem FT200.Signed.FT200.001 300.dlkAddon">001/300 301 302(报警)</a></li>
 
     </ul>
 </body>
