added another two add-on

--- a/assets/app-hdm/FT200-add-on.html
+++ b/assets/app-hdm/FT200-add-on.html
@@ -117,6 +117,8 @@ parent: app(HDM)
         <li><a download href="\assets\app-hdm\add-on\FT200\DM22005-AlrmPrem FT200.Signed.FT200.001 525.dlkAddon">001/525 526 527(报警)</a></li>
         <li><a download href="\assets\app-hdm\add-on\FT200\DM22005-AlrmPrem FT200.Signed.FT200.001 315.dlkAddon">001/315 316 317(报警)</a></li>
         <li><a download href="\assets\app-hdm\add-on\FT200\DM22005-AlrmPrem FT200.Signed.FT200.001 300.dlkAddon">001/300 301 302(报警)</a></li>
+        <li><a class="dm22009" download href="\assets\app-hdm\add-on\FT200\DM22009-DualAnt_12-34.Signed.FT200.001 522.dlkAddon">001/522 523 524(报警+'2|2')</a></li>
+        <li><a download href="\assets\app-hdm\add-on\FT200\DM22005-AlrmPrem FT200.Signed.FT200.001 522.dlkAddon">001/522 523 524(报警)</a></li>
 
     </ul>
 </body>
