modified the layout of project mode perks

--- a/assets/app-hdm/FT200-add-on.html
+++ b/assets/app-hdm/FT200-add-on.html
@@ -11,6 +11,7 @@ parent: app(HDM)
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>dialock ft200 add-on</title>
     <link rel="stylesheet" href="\css\ft200_addon.css">
+    <link rel="stylesheet" href="\css\responsive_list.css">
     <script src="\js\jquery-3.6.2.min.js"></script>
     <script src="\js\addonSelection.js"></script>
 </head>
@@ -29,7 +30,7 @@ parent: app(HDM)
         </figure>
     </div>
     <input type="text" name="serialNumber" id="serialNumber" placeholder="请在此输入您的蓝牙卡片序列号" onfocus="this.value=''"> 
-    <ul id="add_on_list">
+    <ul id="responsive_list">
         <li><a download href="/assets/app-hdm/add-on/FT200/AlrmPrem_AKC169-171_FT200.Signed.dlkAddon">169-171</a></li>
         <li><a download href="/assets/app-hdm/add-on/FT200/AlrmPrem_AKC175-177_FT200.Signed.dlkAddon.dlkAddon">175-177</a></li>
         <li><a download href="/assets/app-hdm/add-on/FT200/DM22005-166-168-AlrmPrem FT200.Signed.FT200.dlkAddon">166-168</a></li>
