--- a/assets/app-hdm/app_mode.html
+++ b/assets/app-hdm/app_mode.html
@@ -2,7 +2,7 @@
 layout: page
 title: app模式/app mode
 parent: app(HDM)
-has_children: true
+has_children: false
 ---
 <!DOCTYPE html>
 <html lang="en">
@@ -11,6 +11,7 @@ has_children: true
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>dialock app mode</title>
+    <link rel="stylesheet" href="\css\responsive_list.css">
     <style>
         #head {margin-bottom: 1em;}
         table {margin-top: 3%;}
@@ -66,6 +67,16 @@ has_children: true
         </tr>
     </table>
     <p>客户根据项目的规模，采购上述四个许可证中的一个。四个许可证均默认配备报警宏。若客户需要其它扩展功能，可使用另外采购宏的方法实现。</p>
-
+    <p>以下每个链接展示了一个采用项目模式可以实现的功能，请点击您感兴趣的链接查看：</p>
+    <ul id="responsive_list">
+        <li><a href="\assets\app-hdm\app_mode_creating_project.html" target="_blank">创建项目(虚拟店铺)</a></li>
+        <li><a href="\assets\app-hdm\app_mode_adding_licenses.html" target="_blank">添加许可证</a></li>
+        <li><a href="\assets\app-hdm\app_mode_dashboard.html" target="_blank">控制面板</a></li>
+        <li><a href="\assets\app-hdm\app_mode_grouping_terminals.html" target="_blank">将设备分组</a></li>
+        <li><a href="\assets\app-hdm\app_mode_replacing_keys.html" target="_blank">替换用户卡</a></li>
+        <li><a href="\assets\app-hdm\app_mode_replacing_terminals.html" target="_blank">替换设备</a></li>
+        <li><a href="\assets\app-hdm\app_mode_add-on.html" target="_blank">添加报警宏</a></li>
+        <li><a href="\assets\app-hdm\app_mode_saving_projects.html" target="_blank">输出/导入项目配置</a></li>
+    </ul>
 </body>
 </html>
