added another videos for app mode

--- a/assets/app-hdm/app_mode.html
+++ b/assets/app-hdm/app_mode.html
@@ -77,6 +77,13 @@ has_children: false
         <li><a href="\assets\app-hdm\app_mode_replacing_terminals.html">替换设备</a></li>
         <li><a href="\assets\app-hdm\app_mode_add-on.html">添加报警宏</a></li>
         <li><a href="\assets\app-hdm\app_mode_saving_projects.html">输出/导入项目配置</a></li>
+        <li><a href="\assets\app-hdm\app_mode_access_log.html">调取访问记录</a></li>
+        <li><a href="\assets\app-hdm\app_mode_grouping_keys.html">将用户卡片分组</a></li>
+        <li><a href="\assets\app-hdm\app_mode_identification.html">识别设备/卡片</a></li>
+        <li><a href="\assets\app-hdm\app_mode_locking_map_creation.html">创建锁系统规划</a></li>
+        <li><a href="\assets\app-hdm\app_mode_configuration_in_advance.html">预设项目</a></li>
+
+
     </ul>
 </body>
 </html>
