added the video page for time model

--- a/assets/app-hdm/app_mode.html
+++ b/assets/app-hdm/app_mode.html
@@ -82,6 +82,7 @@ has_children: false
         <li><a href="\assets\app-hdm\app_mode_identification.html">识别设备/卡片</a></li>
         <li><a href="\assets\app-hdm\app_mode_locking_map_creation.html">创建锁系统规划</a></li>
         <li><a href="\assets\app-hdm\app_mode_configuration_in_advance.html">预设项目</a></li>
+        <li><a href="\assets\app-hdm\app_mode_time_model.html">时间模型</a></li>
 
 
     </ul>
