--- a/assets/FT200/FT200_aux_inter_locking.html
+++ b/assets/FT200/FT200_aux_inter_locking.html
@@ -13,8 +13,20 @@ grand_parent: FT200
     <title>ft200 inter-locking</title>
     <style>
         .title {text-align: center;}
-        .responsive {padding-bottom: 75%; position: relative; margin-top: 3%;}
-        .video {width: 100%; height: 100%; position: absolute;}
+
+        .responsive{
+            overflow:hidden;
+            padding-bottom:75%;
+            position:relative;
+            height:0;}
+
+        .responsive iframe{
+            left:0;
+            top:0;
+            height:100%;
+            width:100%;
+            position:absolute;}
+        
     </style>
 </head>
 <body>
