--- a/assets/app-hdm/app_mode_time_model.html
+++ b/assets/app-hdm/app_mode_time_model.html
@@ -12,7 +12,7 @@ grand_parent: app(HDM)
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>dialock time model</title>
         <style>
-            .video {width: 100%; height: 100%; position: absolute;}
+             iframe {width: 100%; height: 100%; position: absolute;}
             .responsive {padding-bottom: 75%; position: relative; margin-top: 3%;}
             #head {margin-bottom: 1em;}
         </style>
@@ -22,8 +22,7 @@ grand_parent: app(HDM)
         <h2 id="head">{{ page.title }}</h2>
         <p>您可以在创建的项目(虚拟店铺)中，为Dialock设备设定时间区间，使得只有在该时间区间内，对应的用户卡片才能打开该设备。</p>
         <div class="responsive">
-            <iframe frameborder="0" src="https://tv.sohu.com/s/sohuplayer/iplay.html?bid=415767624&autoplay=true&disablePlaylist=true" 
-            allowFullScreen="true" scrolling="no" class="video"></iframe>
+            <iframe frameborder="0" src="https://v.qq.com/txp/iframe/player.html?vid=t3500rph66g" allowFullScreen="true"></iframe>  
         </div>
     </body>
 </html>
