played around various video streaming services

--- a/assets/FT200/FT200_aux_inter_locking.html
+++ b/assets/FT200/FT200_aux_inter_locking.html
@@ -13,20 +13,8 @@ grand_parent: FT200
     <title>ft200 inter-locking</title>
     <style>
         .title {text-align: center;}
-
-        .responsive{
-            overflow:hidden;
-            padding-bottom:75%;
-            position:relative;
-            height:0;}
-
-        .responsive iframe{
-            left:0;
-            top:0;
-            height:100%;
-            width:100%;
-            position:absolute;}
-        
+        .responsive {padding-bottom: 75%; position: relative; margin-top: 3%;}
+        iframe {width: 100%; height: 100%; position: absolute;}
     </style>
 </head>
 <body>
@@ -38,7 +26,7 @@ grand_parent: FT200
     </p>
     <div class="responsive">
         <iframe src="//player.bilibili.com/player.html?aid=471889603&bvid=BV1UT411w7vM&cid=800087933&page=1" 
-        scrolling="no" border="0" frameborder="no" framespacing="0" allowfullscreen="true" class="video"></iframe>
+        scrolling="no" border="0" frameborder="no" framespacing="0" allowfullscreen="true"></iframe>
     </div>
 </body>
 </html>
