--- a/assets/app-hdm/app_mode_time_model.html
+++ b/assets/app-hdm/app_mode_time_model.html
@@ -22,7 +22,9 @@ grand_parent: app(HDM)
         <h2 id="head">{{ page.title }}</h2>
         <p>您可以在创建的项目(虚拟店铺)中，为Dialock设备设定时间区间，使得只有在该时间区间内，对应的用户卡片才能打开该设备。</p>
         <div class="responsive">
-            <iframe frameborder="0" src="https://v.qq.com/txp/iframe/player.html?vid=t3500rph66g" allowFullScreen="true"></iframe>  
+            <iframe src="//player.bilibili.com/player.html?aid=905924782&bvid=BV1TP4y167Z7&cid=982816057&page=1" scrolling="no" 
+            border="0" frameborder="no" framespacing="0" allowfullscreen="true"> </iframe>
         </div>
     </body>
 </html>
+
