modified the name of two add-on files

--- a/assets/app-hdm/FT200-add-on.html
+++ b/assets/app-hdm/FT200-add-on.html
@@ -40,8 +40,8 @@ parent: app(HDM)
         <li><a download href="/assets/app-hdm/add-on/FT200/DM22007-AKC_178-180_.Signed.FT200.dlkAddon">178-180</a></li>
         <li><a download href="/assets/app-hdm/add-on/FT200/DM22007-AlrmPrem_AKC151-153 FT200 V2.Signed.FT200.dlkAddon">151-153</a></li>
         <li><a class="dm22009" download href="/assets/app-hdm/add-on/FT200/DM22009-AlmPrem FT200DualAnt.Signed.FT200.000 172.dlkAddon">172-174(报警+'2|2')</a></li>
-        <li><a download href="\assets\app-hdm\add-on\FT200\DM22015-AlmPrem FT200DualAnt.Signed.FT200.000 172.dlkAddon">172-174(DM22015)</a></li>
-        <li><a download href="\assets\app-hdm\add-on\FT200\DM22005-AlrmPrem FT200.Signed.FT200.000 172.dlkAddon">172-174(DM22005)</a></li>
+        <li><a download href="\assets\app-hdm\add-on\FT200\DM22015-AlmPrem FT200DualAnt.Signed.FT200.000 172.dlkAddon">172-174(报警+'123|4')</a></li>
+        <li><a download href="\assets\app-hdm\add-on\FT200\DM22005-AlrmPrem FT200.Signed.FT200.000 172.dlkAddon">172-174(报警)</a></li>
         <li><a download href="\assets\app-hdm\add-on\FT200\DM22005-AlrmPrem FT200.Signed.FT200.000 430.dlkAddon">430-432</a></li>
         <li><a download href="\assets\app-hdm\add-on\FT200\DM22005-AlrmPrem FT200.Signed.FT200.000 433.dlkAddon">433-435</a></li>
         <li><a download href="\assets\app-hdm\add-on\FT200\DM22005-AlrmPrem FT200.Signed.FT200.000 622.dlkAddon">622-624</a></li>
@@ -58,7 +58,7 @@ parent: app(HDM)
         <li><a download href="\assets\app-hdm\add-on\FT200\DM22005-AlrmPrem FT200.Signed.FT200.000 442.dlkAddon">442-444</a></li>
         <li><a download href="\assets\app-hdm\add-on\FT200\DM29003-Mod_DM22005.Signed.FT200.000 628.dlkAddon">628-630(只监控EFL3C)</a></li>
         <li><a download href="\assets\app-hdm\add-on\FT200\DM22017-AlrmPrem FT200 AUX.Signed.FT200.000 628.dlkAddon">628-630(只监控扩展输入)</a></li>
-        <li><a download href="\assets\app-hdm\add-on\FT200\DM29004-Mod_DM22023.Signed.FT200.000 628.dlkAddon">628-630(监控EFL3C和磁力锁)</a></li>
+        <li><a download href="\assets\app-hdm\add-on\FT200\DM29004-Mod_DM22023.Signed.FT200.000 628.dlkAddon">628-630(监控双输入)</a></li>
         <li><a download href="\assets\app-hdm\add-on\FT200\DM22005-AlrmPrem FT200.Signed.FT200.000 646.dlkAddon">646-648</a></li>
         <li><a download href="\assets\app-hdm\add-on\FT200\DM22005-AlrmPrem FT200.Signed.FT200.000 700.dlkAddon">700-702</a></li>
         <li><a download href="\assets\app-hdm\add-on\FT200\DM22005-AlrmPrem FT200.Signed.FT200.000 703.dlkAddon">703-705</a></li>
