added another part for aux port connection

--- a/assets/emergency/aux-in.html
+++ b/assets/emergency/aux-in.html
@@ -3,10 +3,16 @@ layout: page
 title: 使用扩展输入端口
 parent: 紧急开锁/emergency
 ---
+<!DOCTYPE html>
+<html lang="en">
 <head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>emergency aux port</title>
     <style>
         h2 {text-align: center;}
-        .responsive {padding-bottom: 56.25%; position: relative; margin-top: 3%;}
+        .responsive {padding-bottom: 75%; position: relative; margin-top: 3%;}
         .video {width: 100%; height: 100%; position: absolute;}
     </style>
     <link rel="stylesheet" href="\css\lightbox.min.css">
@@ -30,7 +36,7 @@ parent: 紧急开锁/emergency
         </tr>
         <tr>
             <td>
-                <a href="\assets\app-hdm\akc.jpg" data-lightbox="akc">AKC(编程卡片)</a>
+                <a href="\assets\app-hdm\akc.jpg" data-lightbox="parts">AKC(编程卡片)</a>
             </td>
             <td>917.64.980</td>
             <td>1套(3张)</td>
@@ -42,9 +48,17 @@ parent: 紧急开锁/emergency
             <td>910.52.191</td>
             <td>1</td>
         </tr>
+        <tr>
+            <td>
+                <a href="\assets\emergency\images\connector.jpg" data-lightbox="parts">接插件</a>    
+            </td>
+            <td>237.59.012</td>
+            <td>1包(10个)</td>
+        </tr>
     </table>
     <p>并请下载<a href="/app_files">app HDM</a></p>
     <script src="\js\lightbox-plus-jquery.js"></script>
 </body>
+</html>
 
 
