added another line of words for emergency openning page

--- a/assets/emergency/test-unit.html
+++ b/assets/emergency/test-unit.html
@@ -4,7 +4,13 @@ title: 使用测试器手动开锁
 parent: 紧急开锁/emergency
 has_children: true
 ---
+<!DOCTYPE html>
+<html lang="en">
 <head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>emergency test unit</title>
     <style>
         h2 {text-align: center;}
         table {margin-top: 5%;}
@@ -39,3 +45,4 @@ has_children: true
     <p><a href="\assets\emergency\test-unit\test-unit-combo.pdf">英文单页</a></p>
     <script src="\js\lightbox-plus-jquery.js"></script>
 </body>
+</html>
