--- a/assets/emergency/test-unit-one-lock.html
+++ b/assets/emergency/test-unit-one-lock.html
@@ -17,6 +17,8 @@ grand_parent: 紧急开锁/emergency
         .video {width: 100%; height: 100%; position: absolute;}
         em {color: brown;}
     </style>
+        <link rel="stylesheet" href="\css\lightbox.min.css">
+
 </head>
 <body>
     <h2>{{ page.title }}</h2>
@@ -25,11 +27,19 @@ grand_parent: 紧急开锁/emergency
             紧急情况下，将测试器连入系统，拨动测试器开关，即可实现紧急开锁。此方法适用于FT200无法接入电源的情况。
             详见如下视频。
         </p>
+        <p>
+            <a href="\assets\test-unit\test-unit.jpg" data-lightbox="components">测试器</a>每个店铺配备一个即可,
+            <a href="\assets\emergency\test-unit\adapter.jpg" data-lightbox="components">连接器</a>和
+            <a href="\assets\emergency\test-unit\emergency-openning-cable.jpg" data-lightbox="components">连接线</a>
+            数量同锁头数量。
+        </p>
         <em>（请注意如果控制器已导入报警宏并正常工作中，接入测试器会触发警报。测试器用于控制器断电时开锁使用，控制器正常工作时请勿接入测试器。）</em>
         <figure><img src="\assets\emergency\test-unit\go-to-lock.jpg" alt=""></figure>
         <div class="responsive">
             <iframe src="//player.bilibili.com/player.html?aid=380778696&bvid=BV1Ff4y1F7iR&cid=488375442&page=1" 
             scrolling="no" border="0" frameborder="no" framespacing="0" allowfullscreen="true" class="video"> </iframe>
         </div>
+        <script src="\js\lightbox-plus-jquery.js"></script>
+
 </body>
 </html>
