added another video for demonstrating unlocking by phones

--- a/assets/FT200/FT200_videos_keep_user_key.html
+++ b/assets/FT200/FT200_videos_keep_user_key.html
@@ -4,7 +4,13 @@ title: 编程卡再授权/reauthorize programming key
 parent: 操作视频/Videos
 grand_parent: FT200
 ---
+<!DOCTYPE html>
+<html lang="en">
 <head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>{{page.title}}</title>
     <style>
         .title {text-align: center;}
         .responsive {padding-bottom: 75%; position: relative; margin-top: 3%;}
@@ -28,3 +34,4 @@ grand_parent: FT200
         scrolling="no" border="0" frameborder="no" framespacing="0" allowfullscreen="true" class="video"></iframe>
     </div>
 </body>
+</html>
