--- a/assets/app-hdm/FT200-add-on.html
+++ b/assets/app-hdm/FT200-add-on.html
@@ -122,8 +122,8 @@ parent: app(HDM)
         <li><a download href="\assets\app-hdm\add-on\FT200\DM22005-AlrmPrem FT200.Signed.FT200.001 300.dlkAddon">001/300 301 302(报警)</a></li>
         <li><a class="dm22009" download href="\assets\app-hdm\add-on\FT200\DM22009-DualAnt_12-34.Signed.FT200.001 522.dlkAddon">001/522 523 524(报警+'2|2')</a></li>
         <li><a download href="\assets\app-hdm\add-on\FT200\DM22005-AlrmPrem FT200.Signed.FT200.001 522.dlkAddon">001/522 523 524(报警)</a></li>
+        <li><a download href="\assets\app-hdm\add-on\FT200\DM22030-DualAnt_12-34.Signed.FT200.001 867.dlkAddon">001/867 868 869(报警/切换)</a></li>
 
     </ul>
 </body>
 </html>
-
