added another add-on file

--- a/assets/app-hdm/FT200-add-on.html
+++ b/assets/app-hdm/FT200-add-on.html
@@ -127,8 +127,8 @@ parent: app(HDM)
         <li><a download href="\assets\app-hdm\add-on\FT200\DM22015-DualAnt_123-4.Signed.FT200.001 507.dlkAddon">001/507 508 509(报警/T'123|4')</a></li>
         <li><a download href="\assets\app-hdm\add-on\FT200\DM22030-DualAnt_12-34.Signed.FT200.001 306.dlkAddon">001/306 307 308(报警/T'2|2')</a></li>
         <li><a download href="\assets\app-hdm\add-on\FT200\DM22015-DualAnt_123-4.Signed.FT200.001 306.dlkAddon">001/306 307 308(报警/T'123|4')</a></li>
+        <li><a download href="\assets\app-hdm\add-on\FT200\DM22030-DualAnt_12-34.Signed.FT200.001 291.dlkAddon">001/291 292 293(报警/T'12|34')</a></li>
 
     </ul>
 </body>
 </html>
-
