added another three add-on files

--- a/assets/app-hdm/FT200-add-on.html
+++ b/assets/app-hdm/FT200-add-on.html
@@ -128,6 +128,9 @@ parent: app(HDM)
         <li><a download href="\assets\app-hdm\add-on\FT200\DM22030-DualAnt_12-34.Signed.FT200.001 306.dlkAddon">001/306 307 308(报警/T'2|2')</a></li>
         <li><a download href="\assets\app-hdm\add-on\FT200\DM22015-DualAnt_123-4.Signed.FT200.001 306.dlkAddon">001/306 307 308(报警/T'123|4')</a></li>
         <li><a download href="\assets\app-hdm\add-on\FT200\DM22030-DualAnt_12-34.Signed.FT200.001 291.dlkAddon">001/291 292 293(报警/T'12|34')</a></li>
+        <li><a download href="\assets\app-hdm\add-on\FT200\DM22030-DualAnt_12-34.Signed.FT200.001 864.dlkAddon">001/864 865 866(报警/T'12|34')</a></li>
+        <li><a download href="\assets\app-hdm\add-on\FT200\DM22030-DualAnt_12-34.Signed.FT200.001 822.dlkAddon">001/822 823 824(报警/T'12|34')</a></li>
+        <li><a download href="\assets\app-hdm\add-on\FT200\DM22030-DualAnt_12-34.Signed.FT200.001 816.dlkAddon">001/816 817 818(报警/T'12|34')</a></li>
 
     </ul>
 </body>
