--- a/assets/app-hdm/FT200-add-on.html
+++ b/assets/app-hdm/FT200-add-on.html
@@ -90,14 +90,14 @@ parent: app(HDM)
         <li><a download href="\assets\app-hdm\add-on\FT200\DM22005-AlrmPrem FT200.Signed.FT200.000 931.dlkAddon">931-933</a></li>
         <li><a download href="\assets\app-hdm\add-on\FT200\DM22005-AlrmPrem FT200.Signed.FT200.001 201.dlkAddon">001 201-001 203</a></li>
         <li><a download href="\assets\app-hdm\add-on\FT200\DM22005-AlrmPrem FT200.Signed.FT200.001 210.dlkAddon">001 210-001 212</a></li>
-        <li><a download href="\assets\app-hdm\add-on\FT200\DM22021-AlmPrem FT200 2Ant13.Signed.FT200.001 216.dlkAddon">001 216-001 218(报警+'1|3')</a></li>
+        <li><a class="dm22021" download href="\assets\app-hdm\add-on\FT200\DM22021-AlmPrem FT200 2Ant13.Signed.FT200.001 216.dlkAddon">001 216-001 218(报警+'1|3')</a></li>
         <li><a download href="\assets\app-hdm\add-on\FT200\DM22005-AlrmPrem FT200.Signed.FT200.001 219.dlkAddon">001 219-001 221</a></li>
         <li><a download href="\assets\app-hdm\add-on\FT200\DM22005-AlrmPrem FT200.Signed.FT200.001 222.dlkAddon">001 222-001 224</a></li>
         <li><a class="dm22009" download href="\assets\app-hdm\add-on\FT200\DM22009-AlmPrem FT200DualAnt.Signed.FT200.001 228.dlkAddon">001 228-001 230(报警+'2|2')</a></li>
         <li><a download href="\assets\app-hdm\add-on\FT200\DM22005-AlrmPrem FT200.Signed.FT200.001 228.dlkAddon">001 228-001 230(报警)</a></li>
         <li><a download href="\assets\app-hdm\add-on\FT200\DM22005-AlrmPrem FT200.Signed.FT200.001 207.dlkAddon">001 207-001 209</a></li>
         <li><a download href="\assets\app-hdm\add-on\FT200\DM22005-AlrmPrem FT200.Signed.FT200.001 213.dlkAddon">001 213-001 215</a></li>
-        <li><a download href="\assets\app-hdm\add-on\FT200\DM22021-AlmPrem FT200 2Ant13.Signed.FT200.001 225.dlkAddon">001 225-001 227(报警+'1|3')</a></li>
+        <li><a class="dm22021" download href="\assets\app-hdm\add-on\FT200\DM22021-AlmPrem FT200 2Ant13.Signed.FT200.001 225.dlkAddon">001 225-001 227(报警+'1|3')</a></li>
         <li><a class="dm22009" download href="\assets\app-hdm\add-on\FT200\DM22009-AlmPrem FT200DualAnt.Signed.FT200.001 225.dlkAddon">001 225-001 227(报警+'2|2')</a></li>
         <li><a download href="\assets\app-hdm\add-on\FT200\DM22005-AlrmPrem FT200.Signed.FT200.001 225.dlkAddon">001 225-001 227(报警)</a></li>
         <li><a download href="\assets\app-hdm\add-on\FT200\DM22005-AlrmPrem FT200.Signed.FT200.001 312.dlkAddon">001 312-001 314</a></li>
@@ -107,9 +107,9 @@ parent: app(HDM)
         <li><a download href="\assets\app-hdm\add-on\FT200\DM22005-AlrmPrem FT200.Signed.FT200.001 339.dlkAddon">001 339-001 341</a></li>
         <li><a download href="\assets\app-hdm\add-on\FT200\DM22005-AlrmPrem FT200.Signed.FT200.001 519.dlkAddon">001 519-001 521</a></li>
         <li><a class="dm22009" download href="\assets\app-hdm\add-on\FT200\DM22009-AlmPrem FT200DualAnt.Signed.FT200.001 336.dlkAddon">001 336-001 338(报警+'2|2')</a></li>
-        <li><a download href="\assets\app-hdm\add-on\FT200\DM22014-Dual Antenna.Signed.FT200.001 336.dlkAddon">001 336-001 338('2|2')</a></li>
+        <li><a class="dm22014" download href="\assets\app-hdm\add-on\FT200\DM22014-Dual Antenna.Signed.FT200.001 336.dlkAddon">001 336-001 338('2|2')</a></li>
         <li><a download href="\assets\app-hdm\add-on\FT200\DM22005-AlrmPrem FT200.Signed.FT200.001 321.dlkAddon">001 321-001 323(报警)</a></li>
-        <li><a download href="\assets\app-hdm\add-on\FT200\DM22021-AlmPrem FT200 2Ant13.Signed.FT200.001 504.dlkAddon">001/504 505 506(报警+'1|3')</a></li>
+        <li><a class="dm22021" download href="\assets\app-hdm\add-on\FT200\DM22021-AlmPrem FT200 2Ant13.Signed.FT200.001 504.dlkAddon">001/504 505 506(报警+'1|3')</a></li>
         <li><a class="dm22009" download href="\assets\app-hdm\add-on\FT200\DM22009-AlmPrem FT200DualAnt.Signed.FT200.001 504.dlkAddon">001/504 505 506(报警+'2|2')</a></li>
         <li><a class="dm22009" download href="\assets\app-hdm\add-on\FT200\DM22009-AlmPrem FT200DualAnt.Signed.FT200.001 204.dlkAddon">001 204-001 206(报警+'2|2')</a></li>
         <li><a class="dm22009" download href="\assets\app-hdm\add-on\FT200\DM22009-AlmPrem FT200DualAnt.Signed.FT200.001 333.dlkAddon">001 333-001 335(报警+'2|2')</a></li>
@@ -121,16 +121,16 @@ parent: app(HDM)
         <li><a download href="\assets\app-hdm\add-on\FT200\DM22005-AlrmPrem FT200.Signed.FT200.001 315.dlkAddon">001/315 316 317(报警)</a></li>
         <li><a download href="\assets\app-hdm\add-on\FT200\DM22005-AlrmPrem FT200.Signed.FT200.001 300.dlkAddon">001/300 301 302(报警)</a></li>
         <li><a class="dm22009" download href="\assets\app-hdm\add-on\FT200\DM22009-DualAnt_12-34.Signed.FT200.001 522.dlkAddon">001/522 523 524(报警+'2|2')</a></li>
-        <li><a download href="\assets\app-hdm\add-on\FT200\DM22005-AlrmPrem FT200.Signed.FT200.001 522.dlkAddon">001/522 523 524(报警)</a></li>
-        <li><a download href="\assets\app-hdm\add-on\FT200\DM22030-DualAnt_12-34.Signed.FT200.001 867.dlkAddon">001/867 868 869(报警/T)</a></li>
-        <li><a download href="\assets\app-hdm\add-on\FT200\DM22030-DualAnt_12-34.Signed.FT200.001 507.dlkAddon">001/507 508 509(报警/T)</a></li>
-        <li><a download href="\assets\app-hdm\add-on\FT200\DM22015-DualAnt_123-4.Signed.FT200.001 507.dlkAddon">001/507 508 509(报警/T'123|4')</a></li>
-        <li><a download href="\assets\app-hdm\add-on\FT200\DM22030-DualAnt_12-34.Signed.FT200.001 306.dlkAddon">001/306 307 308(报警/T)</a></li>
-        <li><a download href="\assets\app-hdm\add-on\FT200\DM22015-DualAnt_123-4.Signed.FT200.001 306.dlkAddon">001/306 307 308(报警/T'123|4')</a></li>
-        <li><a download href="\assets\app-hdm\add-on\FT200\DM22030-DualAnt_12-34.Signed.FT200.001 291.dlkAddon">001/291 292 293(报警/T)</a></li>
-        <li><a download href="\assets\app-hdm\add-on\FT200\DM22030-DualAnt_12-34.Signed.FT200.001 864.dlkAddon">001/864 865 866(报警/T)</a></li>
-        <li><a download href="\assets\app-hdm\add-on\FT200\DM22030-DualAnt_12-34.Signed.FT200.001 822.dlkAddon">001/822 823 824(报警/T)</a></li>
-        <li><a download href="\assets\app-hdm\add-on\FT200\DM22030-DualAnt_12-34.Signed.FT200.001 816.dlkAddon">001/816 817 818(报警/T)</a></li>
+        <li><a class="dm22005" download href="\assets\app-hdm\add-on\FT200\DM22005-AlrmPrem FT200.Signed.FT200.001 522.dlkAddon">001/522 523 524(报警)</a></li>
+        <li><a class="dm22030" download href="\assets\app-hdm\add-on\FT200\DM22030-DualAnt_12-34.Signed.FT200.001 867.dlkAddon">001/867 868 869(报警/T)</a></li>
+        <li><a class="dm22030" download href="\assets\app-hdm\add-on\FT200\DM22030-DualAnt_12-34.Signed.FT200.001 507.dlkAddon">001/507 508 509(报警/T)</a></li>
+        <li><a class="dm22015" download href="\assets\app-hdm\add-on\FT200\DM22015-DualAnt_123-4.Signed.FT200.001 507.dlkAddon">001/507 508 509(报警/T'123|4')</a></li>
+        <li><a class="dm22030" download href="\assets\app-hdm\add-on\FT200\DM22030-DualAnt_12-34.Signed.FT200.001 306.dlkAddon">001/306 307 308(报警/T)</a></li>
+        <li><a class="dm22015" download href="\assets\app-hdm\add-on\FT200\DM22015-DualAnt_123-4.Signed.FT200.001 306.dlkAddon">001/306 307 308(报警/T'123|4')</a></li>
+        <li><a class="dm22030" download href="\assets\app-hdm\add-on\FT200\DM22030-DualAnt_12-34.Signed.FT200.001 291.dlkAddon">001/291 292 293(报警/T)</a></li>
+        <li><a class="dm22030" download href="\assets\app-hdm\add-on\FT200\DM22030-DualAnt_12-34.Signed.FT200.001 864.dlkAddon">001/864 865 866(报警/T)</a></li>
+        <li><a class="dm22030" download href="\assets\app-hdm\add-on\FT200\DM22030-DualAnt_12-34.Signed.FT200.001 822.dlkAddon">001/822 823 824(报警/T)</a></li>
+        <li><a class="dm22030" download href="\assets\app-hdm\add-on\FT200\DM22030-DualAnt_12-34.Signed.FT200.001 816.dlkAddon">001/816 817 818(报警/T)</a></li>
 
     </ul>
 </body>
