added another traffic analytics tool

--- a/assets/app-hdm/FT200-add-on.html
+++ b/assets/app-hdm/FT200-add-on.html
@@ -147,5 +147,9 @@ parent: app(HDM)
         <li><a class="dm22030" download href="\assets\app-hdm\add-on\FT200\DM22030-DualAnt_12-34.Signed.FT200.001 792.dlkAddon">001/792 793 794(报警/T)</a></li>
 
     </ul>
+    <a title="Google Analytics Alternative" href="https://clicky.com/101405030">
+        <img alt="Clicky" src="//static.getclicky.com/media/links/badge.gif" border="0" /></a>
+    <script async data-id="101405030" src="//static.getclicky.com/js"></script>
+
 </body>
 </html>
