--- a/assets/app-hdm/FT200-add-on.html
+++ b/assets/app-hdm/FT200-add-on.html
@@ -145,6 +145,7 @@ parent: app(HDM)
         <li><a class="dm22030" download href="\assets\app-hdm\add-on\FT200\DM22030-DualAnt_12-34.Signed.FT200.001 855.dlkAddon">001/855 856 857(报警/T)</a></li>
         <li><a class="dm22030" download href="\assets\app-hdm\add-on\FT200\DM22030-DualAnt_12-34.Signed.FT200.001 852.dlkAddon">001/852 853 854(报警/T)</a></li>
         <li><a class="dm22030" download href="\assets\app-hdm\add-on\FT200\DM22030-DualAnt_12-34.Signed.FT200.001 792.dlkAddon">001/792 793 794(报警/T)</a></li>
+        <li><a class="dm22030" download href="\assets\app-hdm\add-on\FT200\DM22030-DualAnt_12-34.Signed.FT200.001 849.dlkAddon">001/849 850 851(报警/T)</a></li>
 
     </ul>
     <a title="Google Analytics Alternative" href="https://clicky.com/101405030">
