modified the name of akc on the page

--- a/app(HDM).html
+++ b/app(HDM).html
@@ -47,22 +47,19 @@ has_children: true
         </thead>
         <tbody>
             <tr>
-                <td><a href="\assets\app-hdm\akc.jpg" data-lightbox="akc">AKC(编程卡片)</a></td>
+                <td><a href="\assets\app-hdm\akc.jpg" data-lightbox="akc">AKC(蓝牙卡片)</a></td>
                 <td>917.64.980</td>
                 <td>1套(3张)</td>
             </tr>
             <tr>
                 <td><a href="/assets/app-hdm/FT200-add-on.html">宏文件(add-on)</a></td>
                 <td>
-                    <select name="" id="">
-                        <option value="">910.52.191(只报警)</option>
-                        <option value="">910.52.190(除'只报警'以外所有)</option>
-                    </select>
+                    910.52.190
                 </td>
                 <td>1</td>
             </tr>
             <tr>
-                <td><a href="\assets\app-hdm\apk.html">app(HDM)</a></td>
+                <td><a href="\assets\app-hdm\apk.html">app(HMDM)</a></td>
                 <td></td>
             </tr>
         </tbody>
