--- a/assets/emergency/aux-in.html
+++ b/assets/emergency/aux-in.html
@@ -36,7 +36,7 @@ parent: 紧急开锁/emergency
         </tr>
         <tr>
             <td>
-                <a href="\assets\app-hdm\akc.jpg" data-lightbox="parts">AKC(编程卡片)</a>
+                <a href="\assets\app-hdm\akc.jpg" data-lightbox="parts">AKC(蓝牙卡片)</a>
             </td>
             <td>917.64.980</td>
             <td>1套(3张)</td>
@@ -45,7 +45,7 @@ parent: 紧急开锁/emergency
             <td>
                 <a href="\assets\app-hdm\add-on.html">宏文件(add-on)</a>
             </td>
-            <td>910.52.191</td>
+            <td>910.52.190</td>
             <td>1</td>
         </tr>
         <tr>
@@ -56,7 +56,7 @@ parent: 紧急开锁/emergency
             <td>1包(10个)</td>
         </tr>
     </table>
-    <p>并请下载<a href="/app_files">app HDM</a></p>
+    <p>并请下载<a href="/app_files">app HMDM</a></p>
     <script src="\js\lightbox-plus-jquery.js"></script>
 </body>
 </html>
