added another add-on file

--- a/assets/app-hdm/FT200-add-on.html
+++ b/assets/app-hdm/FT200-add-on.html
@@ -1,9 +1,12 @@
 ---
-layout: page
 title: FT200功能扩展/add-on
+layout: page
 parent: app(HDM)
 ---
-<!DOCTYPE html>
+
+```
+
+```<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -149,11 +152,8 @@ parent: app(HDM)
         <li><a class="dm22030" download href="\assets\app-hdm\add-on\FT200\DM22030-DualAnt_12-34.Signed.FT200.001 297.dlkAddon">001/297 298 299(报警/T)</a></li>
         <li><a class="dm22030" download href="\assets\app-hdm\add-on\FT200\DM22030-DualAnt_12-34.Signed.FT200.001 303.dlkAddon">001/303 304 305(报警/T)</a></li>
         <li><a class="dm22030" download href="\assets\app-hdm\add-on\FT200\DM22030-DualAnt_12-34.Signed.FT200.001 294.dlkAddon">001/294 295 296(报警/T)</a></li>
+        <li><a class="dm22030" download href="\assets\app-hdm\add-on\FT200\DM22030-DualAnt_12-34.Signed.FT200.001 846.dlkAddon">001/846 847 848(报警/T)</a></li>
 
     </ul>
-    <a title="Google Analytics Alternative" href="https://clicky.com/101405030">
-        <img alt="Clicky" src="//static.getclicky.com/media/links/badge.gif" border="0" /></a>
-    <script async data-id="101405030" src="//static.getclicky.com/js"></script>
-
 </body>
 </html>
