added another three add-on files

--- a/assets/app-hdm/FT200-add-on.html
+++ b/assets/app-hdm/FT200-add-on.html
@@ -153,6 +153,9 @@ parent: app(HDM)
         <li><a class="dm22030" download href="\assets\app-hdm\add-on\FT200\DM22030-DualAnt_12-34.Signed.FT200.001 303.dlkAddon">001/303 304 305(报警/T)</a></li>
         <li><a class="dm22030" download href="\assets\app-hdm\add-on\FT200\DM22030-DualAnt_12-34.Signed.FT200.001 294.dlkAddon">001/294 295 296(报警/T)</a></li>
         <li><a class="dm22030" download href="\assets\app-hdm\add-on\FT200\DM22030-DualAnt_12-34.Signed.FT200.001 846.dlkAddon">001/846 847 848(报警/T)</a></li>
+        <li><a class="dm22030" download href="\assets\app-hdm\add-on\FT200\DM22030-DualAnt_12-34.Signed.FT200.001 843.dlkAddon">001/843 844 845(报警/T)</a></li>
+        <li><a class="dm22030" download href="\assets\app-hdm\add-on\FT200\DM22030-DualAnt_12-34.Signed.FT200.001 840.dlkAddon">001/840 841 842(报警/T)</a></li>
+        <li><a class="dm22030" download href="\assets\app-hdm\add-on\FT200\DM22030-DualAnt_12-34.Signed.FT200.001 789.dlkAddon">001/789 790 791(报警/T)</a></li>
 
     </ul>
 </body>
